--- a/abnreports.html
+++ b/abnreports.html
@@ -393,6 +393,10 @@
   background: #e3f2fd;
   color: #1565c0;
   margin-top: 4px;
+  width: fit-content;
+  max-width: 100%;
+  flex: 0 0 auto;
+  
 }
 .changepoint-badge.cp-human { background: #fce4ec; color: #c2185b; }
 .changepoint-badge.cp-method { background: #e8f5e9; color: #2e7d32; }
