abnreports.html を更新

--- a/abnreports.html
+++ b/abnreports.html
@@ -1936,7 +1936,7 @@ async function showPastChangePoints(serialNo, boxId, contentId, showMoreBtnId) {
     const changePointData = snap.docs
       .map(d => ({ _id: d.id, ...d.data() }))
       .filter(item => {
-        if (item.type !== 'planned') return false;
+     //   if (item.type !== 'planned') return false;
         const itemSerial = normalizeSerial(item.serialNo || '');
         return itemSerial.includes(normalizedSearch) || normalizedSearch.includes(itemSerial);
       })
