--- a/dateview.html
+++ b/dateview.html
@@ -80,7 +80,7 @@
     color:#fff;padding:20px;box-shadow:var(--shadow);
     position:sticky;top:0;z-index:100
   }
-  .header-content{max-width:1400px;margin:0 auto;display:flex;justify-content:space-between;align-items:center;gap:8px;flex-wrap:wrap}
+  .header-content{max-width:100%;margin:0 auto;padding:0 10px;display:flex;justify-content:space-between;align-items:center;gap:8px;flex-wrap:wrap}
   .header h1{font-size:calc(1.5rem * var(--header-title-scale));font-weight:600}
   .header-actions{display:flex;gap:10px;flex-wrap:wrap}
   .btn-header{
@@ -89,7 +89,7 @@
   }
   .btn-header:hover{background:rgba(255,255,255,.3)}
 
-  .container{max-width:1400px;margin:0 auto;padding:20px}
+  .container{max-width:100%;margin:0 auto;padding:20px 30px}
 
   /* 期間選択 */
   .date-filter{background:var(--card);border-radius:12px;padding:20px;margin-bottom:20px;box-shadow:var(--shadow-2);border:1px solid var(--border)}
@@ -423,6 +423,32 @@
   .badge-good .dot{background:#10b981}
   .badge-warn .dot{background:#f59e0b}
   .badge-danger .dot{background:#ef4444}
+
+  /* 変化点分類バッジ */
+  .badge-cp-人{background:rgba(239,68,68,.14);border-color:rgba(239,68,68,.35);color:#dc2626}
+  .badge-cp-人 .dot{background:#ef4444}
+  .badge-cp-方法{background:rgba(59,130,246,.12);border-color:rgba(59,130,246,.35);color:#2563eb}
+  .badge-cp-方法 .dot{background:#3b82f6}
+  .badge-cp-材料{background:rgba(16,185,129,.12);border-color:rgba(16,185,129,.35);color:#059669}
+  .badge-cp-材料 .dot{background:#10b981}
+  .badge-cp-金型{background:rgba(245,158,11,.14);border-color:rgba(245,158,11,.35);color:#b45309}
+  .badge-cp-金型 .dot{background:#f59e0b}
+  .badge-cp-設備{background:rgba(168,85,247,.14);border-color:rgba(168,85,247,.35);color:#7c3aed}
+  .badge-cp-設備 .dot{background:#a855f7}
+  .badge-cp-その他{background:rgba(148,163,184,.18);border-color:rgba(148,163,184,.35);color:#64748b}
+  .badge-cp-その他 .dot{background:#94a3b8}
+
+  /* 対策状況バッジ */
+  .badge-measure-検討{background:rgba(59,130,246,.12);border-color:rgba(59,130,246,.35);color:#2563eb}
+  .badge-measure-検討 .dot{background:#3b82f6}
+  .badge-measure-暫定{background:rgba(245,158,11,.14);border-color:rgba(245,158,11,.35);color:#b45309}
+  .badge-measure-暫定 .dot{background:#f59e0b}
+  .badge-measure-部品待{background:rgba(168,85,247,.14);border-color:rgba(168,85,247,.35);color:#7c3aed}
+  .badge-measure-部品待 .dot{background:#a855f7}
+  .badge-measure-恒久{background:rgba(16,185,129,.12);border-color:rgba(16,185,129,.35);color:#059669}
+  .badge-measure-恒久 .dot{background:#10b981}
+  .badge-measure-確認{background:rgba(6,182,212,.14);border-color:rgba(6,182,212,.35);color:#0891b2}
+  .badge-measure-確認 .dot{background:#06b6d4}
     /* 停止時間など、表内のコンパクトバッジを少し大きめに */
   .badge-compact{
     padding:6px 12px;
@@ -508,6 +534,79 @@ body.fullscreen-active {
 .datasheet-container.fullscreen .fullscreen-dept-filter {
   display: flex;
 }
+
+/* 全画面時だけ表示する日付フィルター */
+.fullscreen-date-filter {
+  display: none;                 /* 通常時は非表示 */
+  align-items: center;
+  gap: 10px;
+  font-size: 0.9rem;
+  color: var(--ink);
+  flex-wrap: wrap;
+}
+
+.fullscreen-date-filter .fs-date-btn {
+  padding: 6px 14px;
+  border: 2px solid var(--brand);
+  background: transparent;
+  color: var(--brand);
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: 600;
+  transition: .2s;
+  white-space: nowrap;
+}
+
+.fullscreen-date-filter .fs-date-btn:hover {
+  background: rgba(102,126,234,.08);
+}
+
+.fullscreen-date-filter .fs-date-btn.active {
+  background: var(--brand);
+  color: #fff;
+}
+
+.fullscreen-date-filter input[type="date"] {
+  padding: 6px 10px;
+  border-radius: 6px;
+  border: 2px solid var(--border);
+  background: transparent;
+  color: var(--ink);
+  font-size: 0.9rem;
+  transition: .2s;
+}
+
+.fullscreen-date-filter input[type="date"]:focus {
+  outline: none;
+  border-color: var(--brand);
+}
+
+.fullscreen-date-filter .fs-date-group {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+
+.fullscreen-date-filter .fs-date-clear {
+  padding: 6px 12px;
+  border: 1px solid var(--border);
+  background: transparent;
+  color: var(--ink);
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: 500;
+  transition: .2s;
+}
+
+.fullscreen-date-filter .fs-date-clear:hover {
+  border-color: var(--brand);
+  background: rgba(102,126,234,.08);
+}
+
+/* 全画面モードのときだけ表示 */
+.datasheet-container.fullscreen .fullscreen-date-filter {
+  display: flex;
+}
 /* ==== タイトル行のライン名 ==== */
 .line-name{
   font-size:1.4rem;
@@ -588,6 +687,16 @@ body.fullscreen-active {
   font-weight:inherit;     /* ← 同じ太さ */
   color:#000;  
 }
+
+/* バッジ横一列表示 */
+.detail-badges-row{
+  display:flex;
+  flex-wrap:wrap;
+  gap:10px;
+  align-items:center;
+  margin-top:12px;
+}
+
 /* ==== 製品写真を1.5倍に拡大 ==== */
 .photo-grid .product-photo img{
   transform: scale(1.0);         /* ★ 1.5倍表示 */
@@ -683,6 +792,18 @@ body.fullscreen-active {
         <select id="fsDeptSelect">
           <option value="">すべて</option>
         </select>
+      </div>
+
+      <!-- 全画面用日付フィルター -->
+      <div class="fullscreen-date-filter">
+        <button class="fs-date-btn" id="fsBtnYesterday">前日</button>
+        <button class="fs-date-btn" id="fsBtnToday">今日</button>
+        <div class="fs-date-group">
+          <input type="date" id="fsDateFrom" title="開始日">
+          <span style="color:var(--muted);">〜</span>
+          <input type="date" id="fsDateTo" title="終了日">
+        </div>
+        <button class="fs-date-clear" id="fsBtnClearDate">クリア</button>
       </div>
 
           <label for="displayCount">表示件数:</label>
@@ -884,8 +1005,8 @@ function getProductPhotoUrl(serialNoRaw){
   const fsDeptSelect = document.getElementById('fsDeptSelect');
   let dateFromStr = null, dateToStr = null;
 
-  let sparkMode = '24h';
-  let lastManualSparkMode = '24h';
+  let sparkMode = '7d';
+  let lastManualSparkMode = '7d';
   let autoRangeActive = false;
 
   let viewMode = 'total';
@@ -915,6 +1036,8 @@ function getProductPhotoUrl(serialNoRaw){
     { id:'photos', label:'写真', sortable:false },
     { id:'status', label:'状態', sortable:true },
     { id:'recurrenceType', label:'新規/再発', sortable:true },
+    { id:'measureStatus', label:'対策状況', sortable:true },
+    { id:'changePointCategory', label:'変化点', sortable:true },
 
   ];
 
@@ -1159,6 +1282,10 @@ function convertAnomalyDoc(doc){
     restartTimeNorm:      resTime,
     stopMinutes: (typeof raw.stopMinutes === 'number') ? raw.stopMinutes : stop,
 measureStatus: (raw.measureStatus || raw.measure_status || raw.statusMeasure || '').trim(),
+
+    // 変化点情報
+    changePointCategory: (raw.changePointCategory || '').trim(),
+    changePointContent: (raw.changePointContent || '').trim(),
 
     // ★ ここから追加項目
     qualityResponse: raw.qualityResponse || '',
@@ -1978,6 +2105,28 @@ const columns = visibleColumns
             } else if (col.id==='stopMinutes') {
               v = buildStopBadge(item.stopMinutes, {compact:true});
 
+            } else if (col.id==='measureStatus') {
+              const ms = item.measureStatus || '';
+              if (ms) {
+                let msCls = 'badge-muted';
+                if (ms.includes('検討')) msCls = 'badge-measure-検討';
+                else if (ms.includes('暫定')) msCls = 'badge-measure-暫定';
+                else if (ms.includes('部品待')) msCls = 'badge-measure-部品待';
+                else if (ms.includes('恒久')) msCls = 'badge-measure-恒久';
+                else if (ms.includes('確認')) msCls = 'badge-measure-確認';
+                v = `<span class="badge badge-compact ${msCls}"><span class="dot"></span>${ms}</span>`;
+              } else {
+                v = '-';
+              }
+
+            } else if (col.id==='changePointCategory') {
+              const cpCat = item.changePointCategory || '';
+              if (cpCat) {
+                v = `<span class="badge badge-compact badge-cp-${cpCat}"><span class="dot"></span>${cpCat}</span>`;
+              } else {
+                v = '-';
+              }
+
             } else if (col.id==='anomalyContent' || col.id==='actionTaken') {
               const s = v || '';
               v = (s.length>30 ? s.slice(0,30)+'...' : s);
@@ -2137,6 +2286,27 @@ if (rec === '再発') {
   recBadgeLbl = '調節';
 }
 
+    // 対策状況バッジ
+    let measureBadgeHtml = '';
+    const ms = item.measureStatus || '';
+    if (ms) {
+      let msCls = 'badge-muted';
+      if (ms.includes('検討')) msCls = 'badge-measure-検討';
+      else if (ms.includes('暫定')) msCls = 'badge-measure-暫定';
+      else if (ms.includes('部品待')) msCls = 'badge-measure-部品待';
+      else if (ms.includes('恒久')) msCls = 'badge-measure-恒久';
+      else if (ms.includes('確認')) msCls = 'badge-measure-確認';
+      measureBadgeHtml = `<span class="badge badge-lg ${msCls}"><span class="dot"></span>${ms}</span>`;
+    }
+
+    // 変化点バッジ
+    let cpBadgeHtml = '';
+    const cpCat = item.changePointCategory || '';
+    if (cpCat) {
+      const cpCls = `badge-cp-${cpCat}`;
+      cpBadgeHtml = `<span class="badge badge-lg ${cpCls}"><span class="dot"></span>変化点: ${cpCat}</span>`;
+    }
+
 
     const modal = document.getElementById('detailModal');
     const title = document.getElementById('detailTitle');
@@ -2149,13 +2319,16 @@ title.innerHTML = `
     <span class="line">（${item.lineName || '-'}）</span>
   </div>
 
-  <span class="badge badge-lg ${stopBadgeCls}">
-    <span class="dot"></span>${stopBadgeLbl}
-  </span>
-
-  <span class="badge badge-lg ${recBadgeCls}">
-    <span class="dot"></span>${recBadgeLbl}
-  </span>
+  <div class="detail-badges-row">
+    <span class="badge badge-lg ${stopBadgeCls}">
+      <span class="dot"></span>${stopBadgeLbl}
+    </span>
+    <span class="badge badge-lg ${recBadgeCls}">
+      <span class="dot"></span>${recBadgeLbl}
+    </span>
+    ${measureBadgeHtml}
+    ${cpBadgeHtml}
+  </div>
 `;
 
 
@@ -2303,6 +2476,18 @@ title.innerHTML = `
   <div class="section-title">📌 対策状況</div>
   <div class="detail-text-area">${item.measureStatus || '-'}</div>
 </div>
+${item.changePointCategory ? `
+<div class="detail-section" style="background:rgba(16,185,129,.05);border-left:3px solid #10b981;padding-left:12px;">
+  <div class="section-title">🔄 変化点情報</div>
+  <div class="detail-grid">
+    <div class="detail-item">
+      <div class="detail-label">変化点分類</div>
+      <div class="detail-value"><span class="badge badge-cp-${item.changePointCategory}"><span class="dot"></span>${item.changePointCategory}</span></div>
+    </div>
+  </div>
+  <div class="detail-text-area" style="margin-top:8px;">${item.changePointContent || '（内容未入力）'}</div>
+</div>
+` : ''}
         </div>
 
         <!-- 右カラム：写真パネル一式 -->
@@ -2506,7 +2691,7 @@ title.innerHTML = `
   document.getElementById('mode7').addEventListener('click', ()=>setManualMode('7d'));
   document.getElementById('mode30').addEventListener('click',()=>setManualMode('30d'));
   document.getElementById('mode24').addEventListener('click',()=>setManualMode('24h'));
-  setManualMode('24h');
+  setManualMode('7d');
 
   function setViewMode(mode){
     viewMode = mode;
@@ -2522,6 +2707,15 @@ title.innerHTML = `
     const y=getPreviousBusinessDay(); dateFromStr=y; dateToStr=y;
     document.getElementById('dateFrom').value=y; document.getElementById('dateTo').value=y;
     document.getElementById('btnYesterday').classList.add('active'); document.getElementById('btnToday').classList.remove('active');
+    // 全画面側も同期
+    const fsFrom = document.getElementById('fsDateFrom');
+    const fsTo = document.getElementById('fsDateTo');
+    const fsBtnY = document.getElementById('fsBtnYesterday');
+    const fsBtnT = document.getElementById('fsBtnToday');
+    if (fsFrom) fsFrom.value = y;
+    if (fsTo) fsTo.value = y;
+    if (fsBtnY) fsBtnY.classList.add('active');
+    if (fsBtnT) fsBtnT.classList.remove('active');
     autoRangeActive=true; drawAllSparklines();
     refreshPillsForDate();
     applyFilters();
@@ -2531,6 +2725,15 @@ title.innerHTML = `
     const t=getOperationalToday(); dateFromStr=t; dateToStr=t;
     document.getElementById('dateFrom').value=t; document.getElementById('dateTo').value=t;
     document.getElementById('btnToday').classList.add('active'); document.getElementById('btnYesterday').classList.remove('active');
+    // 全画面側も同期
+    const fsFrom = document.getElementById('fsDateFrom');
+    const fsTo = document.getElementById('fsDateTo');
+    const fsBtnY = document.getElementById('fsBtnYesterday');
+    const fsBtnT = document.getElementById('fsBtnToday');
+    if (fsFrom) fsFrom.value = t;
+    if (fsTo) fsTo.value = t;
+    if (fsBtnT) fsBtnT.classList.add('active');
+    if (fsBtnY) fsBtnY.classList.remove('active');
     autoRangeActive=true; drawAllSparklines();
     refreshPillsForDate();
     applyFilters();
@@ -2542,6 +2745,15 @@ title.innerHTML = `
     dateFromStr=f; dateToStr=t;
     document.getElementById('btnYesterday').classList.remove('active');
     document.getElementById('btnToday').classList.remove('active');
+    // 全画面側も同期
+    const fsFrom = document.getElementById('fsDateFrom');
+    const fsTo = document.getElementById('fsDateTo');
+    const fsBtnY = document.getElementById('fsBtnYesterday');
+    const fsBtnT = document.getElementById('fsBtnToday');
+    if (fsFrom) fsFrom.value = f || '';
+    if (fsTo) fsTo.value = t || '';
+    if (fsBtnY) fsBtnY.classList.remove('active');
+    if (fsBtnT) fsBtnT.classList.remove('active');
 
     if(f || t){ autoRangeActive=true; } else { autoRangeActive=false; sparkMode=lastManualSparkMode; }
     drawAllSparklines();
@@ -2556,6 +2768,15 @@ title.innerHTML = `
     dateFromStr=null; dateToStr=null;
     document.getElementById('dateFrom').value=''; document.getElementById('dateTo').value='';
     document.getElementById('btnYesterday').classList.remove('active'); document.getElementById('btnToday').classList.remove('active');
+    // 全画面側も同期
+    const fsFrom = document.getElementById('fsDateFrom');
+    const fsTo = document.getElementById('fsDateTo');
+    const fsBtnY = document.getElementById('fsBtnYesterday');
+    const fsBtnT = document.getElementById('fsBtnToday');
+    if (fsFrom) fsFrom.value = '';
+    if (fsTo) fsTo.value = '';
+    if (fsBtnY) fsBtnY.classList.remove('active');
+    if (fsBtnT) fsBtnT.classList.remove('active');
     autoRangeActive=false; sparkMode=lastManualSparkMode;
     drawAllSparklines();
     refreshPillsForDate();
@@ -2580,6 +2801,15 @@ title.innerHTML = `
     dateFromStr=null; dateToStr=null;
     document.getElementById('dateFrom').value=''; document.getElementById('dateTo').value='';
     document.getElementById('btnYesterday').classList.remove('active'); document.getElementById('btnToday').classList.remove('active');
+    // 全画面側も同期
+    const fsFrom = document.getElementById('fsDateFrom');
+    const fsTo = document.getElementById('fsDateTo');
+    const fsBtnY = document.getElementById('fsBtnYesterday');
+    const fsBtnT = document.getElementById('fsBtnToday');
+    if (fsFrom) fsFrom.value = '';
+    if (fsTo) fsTo.value = '';
+    if (fsBtnY) fsBtnY.classList.remove('active');
+    if (fsBtnT) fsBtnT.classList.remove('active');
     autoRangeActive=false; sparkMode=lastManualSparkMode||'7d';
     const selCounter = document.getElementById('selCounter'); if(selCounter) selCounter.textContent='';
     drawAllSparklines();
@@ -2634,6 +2864,96 @@ if (fsDeptSelect) {
   });
 }
 
+// === 全画面用：日付フィルター ===
+// 全画面とメイン画面の日付同期用ヘルパー
+function syncDateFilters(fromVal, toVal, activeBtn) {
+  // メイン画面
+  document.getElementById('dateFrom').value = fromVal || '';
+  document.getElementById('dateTo').value = toVal || '';
+  document.getElementById('btnYesterday').classList.toggle('active', activeBtn === 'yesterday');
+  document.getElementById('btnToday').classList.toggle('active', activeBtn === 'today');
+  
+  // 全画面
+  const fsFrom = document.getElementById('fsDateFrom');
+  const fsTo = document.getElementById('fsDateTo');
+  const fsBtnY = document.getElementById('fsBtnYesterday');
+  const fsBtnT = document.getElementById('fsBtnToday');
+  if (fsFrom) fsFrom.value = fromVal || '';
+  if (fsTo) fsTo.value = toVal || '';
+  if (fsBtnY) fsBtnY.classList.toggle('active', activeBtn === 'yesterday');
+  if (fsBtnT) fsBtnT.classList.toggle('active', activeBtn === 'today');
+}
+
+// 全画面用：前日ボタン
+const fsBtnYesterday = document.getElementById('fsBtnYesterday');
+if (fsBtnYesterday) {
+  fsBtnYesterday.addEventListener('click', () => {
+    const y = getPreviousBusinessDay();
+    dateFromStr = y;
+    dateToStr = y;
+    syncDateFilters(y, y, 'yesterday');
+    autoRangeActive = true;
+    drawAllSparklines();
+    refreshPillsForDate();
+    applyFilters();
+  });
+}
+
+// 全画面用：今日ボタン
+const fsBtnToday = document.getElementById('fsBtnToday');
+if (fsBtnToday) {
+  fsBtnToday.addEventListener('click', () => {
+    const t = getOperationalToday();
+    dateFromStr = t;
+    dateToStr = t;
+    syncDateFilters(t, t, 'today');
+    autoRangeActive = true;
+    drawAllSparklines();
+    refreshPillsForDate();
+    applyFilters();
+  });
+}
+
+// 全画面用：日付入力変更
+const fsDateFrom = document.getElementById('fsDateFrom');
+const fsDateTo = document.getElementById('fsDateTo');
+
+function onFsDateChange() {
+  const f = fsDateFrom?.value || null;
+  const t = fsDateTo?.value || null;
+  dateFromStr = f;
+  dateToStr = t;
+  syncDateFilters(f, t, null);
+  
+  if (f || t) {
+    autoRangeActive = true;
+  } else {
+    autoRangeActive = false;
+    sparkMode = lastManualSparkMode;
+  }
+  drawAllSparklines();
+  refreshPillsForDate();
+  applyFilters();
+}
+
+if (fsDateFrom) fsDateFrom.addEventListener('change', onFsDateChange);
+if (fsDateTo) fsDateTo.addEventListener('change', onFsDateChange);
+
+// 全画面用：クリアボタン
+const fsBtnClearDate = document.getElementById('fsBtnClearDate');
+if (fsBtnClearDate) {
+  fsBtnClearDate.addEventListener('click', () => {
+    dateFromStr = null;
+    dateToStr = null;
+    syncDateFilters('', '', null);
+    autoRangeActive = false;
+    sparkMode = lastManualSparkMode;
+    drawAllSparklines();
+    refreshPillsForDate();
+    applyFilters();
+  });
+}
+
   (async()=>{
     const ok = await checkAuth();
     if (!ok) {
@@ -2649,15 +2969,23 @@ if (fsDeptSelect) {
 
     if (df && !df.value) df.value = t;
     if (dt && !dt.value) dt.value = t;
+    
+    // 全画面側も初期化
+    const fsFrom = document.getElementById('fsDateFrom');
+    const fsTo = document.getElementById('fsDateTo');
+    const fsBtnT = document.getElementById('fsBtnToday');
+    if (fsFrom && !fsFrom.value) fsFrom.value = t;
+    if (fsTo && !fsTo.value) fsTo.value = t;
 
     if (!dateFromStr && !dateToStr) {
       dateFromStr     = t;
       dateToStr       = t;
-      autoRangeActive = true;
+      autoRangeActive = false;  // スパークラインは7日モードで表示
       const btnToday     = document.getElementById('btnToday');
       const btnYesterday = document.getElementById('btnYesterday');
       if (btnToday)     btnToday.classList.add('active');
       if (btnYesterday) btnYesterday.classList.remove('active');
+      if (fsBtnT) fsBtnT.classList.add('active');
     }
 
     // ★ ここからリアルタイム監視開始
